# Incrementum

./: .eslintcache  .gitattributes  .gitignore  .lint-report.json  .release-notes.tmp.md  .vercelignore  AGENT_STATE.md  CHANGELOG.md  PKGBUILD  README.md  eslint.config.js  ideas.md  incrementum-android-arm64-signed.apk.idsig  incrementum-browser-sync.xpi  index.html  package-lock.json  package.json  pnpm-lock.yaml  prompt.md  report.md  requirements.txt  tsconfig.json  vite.config.ts
.tmp/: differential_equations_fields.json
api/: __init__.py  pyproject.toml  requirements.txt
browser_extension/: .amo-upload-uuid  README.md  background.js  background_debug.js  background_minimal.js  content.js  incrementum-browser-sync-1.6.0.xpi  incrementum-browser-sync.xpi  manifest.json  options.js  popup.html  popup.js
docs/: ANKI_LATEX_COMPATIBILITY.md  FEATURES_IMPLEMENTED.md  LINUX_WEBKITGTK.md  NEWSLETTER_IMPLEMENTATION_COMPLETE.md  OCR_FEATURES.md  PROJECT_SUMMARY.md  PROXY_SETUP.md  USER_HANDBOOK.de.md  USER_HANDBOOK.es.md  USER_HANDBOOK.fr.md  USER_HANDBOOK.ja.md  USER_HANDBOOK.md  USER_HANDBOOK.zh.md  fal-tts.md  groq-transcription.md  newsletter-directory-ui-ux-improvements.md  newsletter-improvements-summary.md  notebooklm-appimage-runtime.md  notebooklm-document-qa-rollout.md  notebooklm-integration.md  packaged-command-palette-shortcut-verification.md
openspec/: AGENTS.md  project.md
public/: manifest.json  sw.js
scripts/: build-whisper-vulkan.sh  cdp-eval.cjs  ci-build-appimage.sh  cross-build-gnu.sh  cross-build-windows.sh  cross-build.sh  download-sidecars.js  generate-icons.mjs  generate-sounds.mjs  gh-actions-triage.sh  icon-map.json  import_feedspot_feeds.py  migrate-icons.mjs  migrate-report.txt  release-downloads.sh  release-notes.md  release.cjs  setup-docker-downloads.sh  tauri-wrapper.sh  translate_handbook.py  verify-deb-bundle.sh  verify-macos-bundles.sh  verify-notebooklm-runtime.sh  verify-podcast-groq.cjs  verify-windows-bundles.ps1
server/: package-lock.json
src/: App.tsx  index.css  main.tsx
src-tauri/: AppRun  Cargo.toml  build.rs  dev-wrapper.sh  tauri.conf.json  tauri.linux.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 004_add_transcription.sql  005_add_semantic_search.sql  006_add_learning_item_interaction_metadata.sql  007_add_collections.sql  008_add_is_default_to_collections.sql  008_fix_collections_schema.sql  009_add_queue_item_embeddings.sql  010_add_extract_priority.sql  011_add_extract_dismissed.sql  051_add_document_chunk_embeddings.sql
src-tauri/plugins/folder-import/: Cargo.toml  build.rs
src-tauri/plugins/folder-import/android/: build.gradle.kts  proguard-rules.pro
src-tauri/plugins/folder-import/android/src/main/: AndroidManifest.xml
src-tauri/plugins/folder-import/android/src/main/java/com/incrementum/folderimport/: FolderImportPlugin.kt
src-tauri/plugins/folder-import/ios/: Package.swift
src-tauri/plugins/folder-import/ios/Sources/: FolderImportPlugin.swift
src-tauri/plugins/folder-import/permissions/: default.toml
src-tauri/plugins/folder-import/permissions/autogenerated/: reference.md
src-tauri/plugins/folder-import/permissions/autogenerated/commands/: backup_db_to_downloads.toml  pick_folder_documents.toml  register_share_listener.toml
src-tauri/plugins/folder-import/permissions/schemas/: schema.json
src-tauri/plugins/folder-import/src/: lib.rs
src-tauri/scripts/: anna_download.py
src-tauri/src/: anki.rs  battery.rs  browser_sync_server.rs  cloud_sync.rs  demo.rs  error.rs  integrations.rs  kindle_clippings.rs  lib.rs  main.rs  media_server.rs  notebooklm.rs  pocket_tts.rs  scheduler.rs  screenshot.rs  security.rs  security_tests.rs  segmentation.rs  sponsorblock.rs  study_json_import.rs  supermemo_import.rs  sync.rs  twitter.rs  vector_store.rs  youtube.rs
src-tauri/src/ai/: embedding_config.rs  embeddings.rs  flashcard_generator.rs  mod.rs  prompts.rs  providers.rs  qa.rs  summarizer.rs
src-tauri/src/algorithms/: engaging_scheduler.rs  incremental_scheduler.rs  mod.rs  optimizer.rs  queue_selector.rs  relevance.rs  sm18.rs  sm18_data.rs  sm20.rs  supermemo.rs
src-tauri/src/backup/: manager.rs
src-tauri/src/cloud/: auth_store.rs  dropbox.rs  googledrive.rs  mod.rs  onedrive.rs  provider.rs
src-tauri/src/commands/: ai.rs  ai_key_store.rs  algorithm.rs  analytics.rs  anna_archive.rs  audiobook.rs  collection_archive.rs  collections.rs  curated_feeds.rs  document.rs  document_bulk.rs  extract.rs  extract_bulk.rs  extract_review.rs  file_drop.rs  focus_timer.rs  image_registry.rs  learning_item.rs  legacy_import.rs  llm.rs  mcp.rs  mod.rs  notifications.rs  ocr.rs  ocr_runtime.rs  podcast.rs  queue.rs  queue_bulk.rs  rag.rs  reading_goals.rs  review.rs  rss.rs  rss_features.rs  scheduler.rs  search.rs  secure_storage.rs  segmentation.rs  semantic_graph.rs  semantic_search.rs  substack.rs  (+4 more)
src-tauri/src/commands/cloud/: backup.rs  oauth.rs  sync.rs
src-tauri/src/database/: connection.rs  document_repository.rs  migrations.rs  mod.rs  repository.rs
src-tauri/src/generator/: mod.rs
src-tauri/src/mcp/: client.rs  server.rs  tools.rs  types.rs
src-tauri/src/models/: category.rs  collection.rs  document.rs  extract.rs  image_asset.rs  learning_item.rs  mod.rs  playlist.rs  podcast.rs  queue.rs  reading_goal.rs  tag.rs  transcription_queue.rs  video_extract.rs
src-tauri/src/ocr/: mod.rs  processor.rs  providers.rs  runtime.rs
src-tauri/src/podcast/: mod.rs  parser.rs
src-tauri/src/processor/: epub.rs  html.rs  markdown.rs  pdf.rs
src-tauri/src/rss/: commands.rs  mod.rs  models.rs  repository.rs  service.rs
src-tauri/src/services/: position.rs  reading_goal.rs
src-tauri/src/tas/: circular.rs  gating.rs  jitter.rs  maturity.rs  mod.rs  queue_assembly.rs
src-tauri/src/transcription/: auto_queue.rs  engine.rs  idle_scanner.rs  job_queue.rs  mod.rs  model_manager.rs
src-tauri/src/utils/: ffmpeg.rs  mod.rs  retry.rs
transcript-tester/: README.md  fetch.py
vps-service/: .env.example  (+4 more)
(+1567 files in other folders)
