[package]
name = "incrementum-tauri"
version = "1.56.0"
description = "Incrementum - Incremental Reading and Spaced Repetition"
authors = ["Incrementum Team"]
edition = "2021"

[lib]
name = "incrementum_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Pin to 2.11.0 to avoid the is_local_url() regression in 2.11.1+ (GHSA-7gmj-67g7-phm9)
# which treats http://localhost (tauri-plugin-localhost) as a remote origin and
# blocks all custom IPC commands. Incrementum only loads its own bundled assets,
# so the origin-confusion CVE vector does not apply. See also:
# https://github.com/tauri-apps/tauri/security/advisories/GHSA-7gmj-67g7-phm9
tauri = { version = "=2.11.0", features = ["unstable", "macos-private-api"] }

# Note: "devtools" feature is intentionally not enabled unconditionally.
# DevTools are opened at runtime via INCREMENTUM_OPEN_DEVTOOLS env var.
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# OS info plugin — used by the frontend to detect native mobile builds
# (platform() returns "android"/"ios"/"macos"/...) so the mobile UI shell
# renders inside the Android/iOS Tauri webview. Compiles for all targets,
# unlike localhost/battery which are desktop-only.
tauri-plugin-os = "2"

# In-repo mobile plugin for importing documents from a folder recursively.
# On desktop it opens a native folder dialog + walkdir scan; on Android it uses
# SAF (ACTION_OPEN_DOCUMENT_TREE) and on iOS a UIDocumentPickerViewController in
# folder mode, staging files into app-private storage so the path-based import
# pipeline can read them. See plugins/folder-import/.
incrementum-folder-import = { path = "plugins/folder-import" }
window-vibrancy = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "derive"], default-features = false }
libsqlite3-sys = { version = "0.28", features = ["bundled", "bundled-windows"] }
tokio = { version = "1", features = ["full"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Base64 encoding
base64 = "0.22"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "stream", "multipart", "rustls-tls"] }
# rustls crypto provider. reqwest 0.12's `rustls-tls` resolves to the
# `*-no-provider` variant, which means rustls 0.23 is compiled WITHOUT an
# auto-installed crypto provider. On Android this panics at runtime:
#   "No rustls crypto provider is configured. When using the
#    `rustls-no-provider` feature you must install a crypto provider before
#    building a Client..."
# We pull in rustls with the `ring` provider (the backend reqwest selects via
# `__rustls-ring`) and install it as the default at startup — see run() in
# lib.rs. `aws_lc_rs` does not build for android/ios in this toolchain.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
lazy_static = "1.4"
url = "2.5"
urlencoding = "2.1"
rand = "0.8"
once_cell = "1.19"

# Encryption
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
hostname = "0.4"

# Vector search and embeddings
byteorder = "1.5"

# WebSocket
tokio-tungstenite = "0.23"
futures-util = "0.3"

# HTTP server for browser extension
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }

# File processing
lopdf = { version = "0.34", features = ["tokio"] }
pdf-extract = "0.7"
epub = "2"
walkdir = "2"
regex = "1"
zip = "0.6"
quick-xml = "0.37"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
image = "0.24"

# RSS parsing
roxmltree = "0.20"
md5 = "0.7"

# HTML content extraction for full article reading
readable-readability = "0.4"
html2text = "0.13"

# Spaced Repetition
fsrs = "5.2"

# Environment variables
dotenvy = "0.15"

# Config directories
dirs = "5.0"

# OS keychain for OAuth token persistence
keyring = "3"

# Encrypted fallback key derivation
pbkdf2 = "0.12"

# Desktop-only dependencies.
# The crates below have no Android/iOS backend and fail to compile for those
# targets, so they are scoped to desktop via a target-specific table:
#   - `battery` 0.7: emits "Support for this target OS is not implemented yet!"
#     on android/ios.
#   - `xcap` 0.8: its `platform` module is empty on iOS/Android, so compiling it
#     fails with "could not find `platform` in the crate root".
# On mobile the corresponding Tauri commands are stubbed out (see src/battery.rs
# and src/screenshot.rs), and the `screenshot` cargo feature is a no-op there
# because `xcap` is absent from the dependency graph on those targets.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
battery = "0.7"
xcap = { version = "0.8", optional = true }
# Desktop-only: tauri-plugin-localhost serves the frontend over
# http://localhost:<port> so YouTube iframe embeds work (the `tauri://`
# custom protocol is treated as a remote origin and blocks iframes). On
# android/ios the mobile WebView cannot reach the loopback server, so the app
# shows "localhost:9527 could not be loaded". Mobile uses the bundled
# frontendDist via tauri:// instead (see the `custom-protocol-mobile` feature).
tauri-plugin-localhost = "2"

[features]
# Disable custom-protocol to use http://localhost instead of tauri://
# This allows YouTube iframe embeds to work properly without Error 153
default = ["screenshot"]
custom-protocol = ["tauri/custom-protocol"]
screenshot = ["xcap"]
devtools = ["tauri/devtools"]

# Aggressive release optimization for battery efficiency.
# NOTE: Some environments have observed rustc/LLVM crashes (SIGSEGV) with high
# optimization on large dependency graphs. If this happens, temporarily fall
# back to opt-level = "z", lto = "thin", codegen-units = 4.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Ensure third-party crates also get full optimization
[profile.release.package."*"]
opt-level = 3

# NOTE: In some environments we've observed rustc/LLVM crashing (SIGSEGV) when
# compiling large dependency graphs with full debuginfo/incremental enabled.
# Disabling both improves build stability for `tauri dev`.
[profile.dev]
features = ["devtools"]
debug = 0
incremental = false

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
burn-ndarray = { path = "../vendor/burn-ndarray-0.17.1" }
macerator = { path = "../vendor/macerator-0.2.10" }
systemstat = { git = "https://github.com/melpomenex/systemstat", branch = "fix-android-procfs" }
